bk_ida/gccida/g1/instantiate_decl
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_decl/src/function.c:4151:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_decl/src/function.c:4152:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_decl/src/function.c:4153:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_decl/src/function.c:4154:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_decl/src/function.c:4155:4: error: expected ';' after expression
rtx addr[4]; // [rsp+0h] [rbp-20h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_decl/src/function.c:4155:5: error: use of undeclared identifier 'addr'
rtx addr[4]; // [rsp+0h] [rbp-20h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_decl/src/function.c:4160:1: error: use of undeclared identifier 'addr'
addr[0] = rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_decl/src/function.c:4181:1: error: use of undeclared identifier 'addr'
addr[0] = copy_rtx( rtx); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_decl/src/function.c:4182:29: error: use of undeclared identifier 'addr'
instantiate_virtual_regs_1( addr, 0LL, 0); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_decl/src/function.c:4193:29: error: use of undeclared identifier 'addr'
if ( !memory_address_p( v8, addr[0]) ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_decl/src/function.c:4207:30: error: use of undeclared identifier 'addr'
if ( !memory_address_p( v10, addr[0]) ) 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_decl/src/function.c:4217:29: error: use of undeclared identifier 'addr'
instantiate_virtual_regs_1( addr, 0LL, 0); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_decl/src/function.c:4219:17: error: use of undeclared identifier 'addr'
x->fld[0].rtx = addr[0]; 
                ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_decl/src/obj/function.o] Error 1
